@@ -1,3 +1,7 @@
+2005-06-15  Derek Price  <derek@ximbiot.com>
+
+	* bison.m4 (gl_BISON): Use new build-aux/bison-missing script.
+
 2005-06-10  Derek Price  <derek@ximbiot.com>
 
 	Sync with GNULIB.
